# waypaper-config-selector

./: .gitignore  CMakeLists.txt  README.md  config.cpp  config.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  preference.cpp  preference.h  preference.ui
src/: CMakeLists.txt  config.h  mainwindow.h  mainwindow.ui  preference.ui  utils.cpp  utils.h
